--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,31 +27,13 @@ jobs:
     needs: [js-install-and-test]
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: Checkout
+      - name: "Build:checkout"
         uses: actions/checkout@v2
-      -
-        name: Show structure
-        run: |
-          ls -R
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: 'Build:dockerimage'
+        uses: docker/build-push-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/386
-          push: true
-          tags: timothystewart6/littlelink-server:latest
+          registry: ghcr.io
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PAT }}
+          repository: techno-tim/littlelink-server
+          tags: latest
