--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,27 @@ jobs:
     needs: [js-install-and-test]
     runs-on: ubuntu-latest
     steps:
-      - name: "Build:checkout"
+      - 
+        name: Checkout
         uses: actions/checkout@v2
-      - name: 'Build:dockerimage'
-        uses: docker/build-push-action@v1
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to Registry
+        uses: docker/login-action@v1
         with:
-          registry: ghcr.io
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PAT }}
-          repository: techno-tim/littlelink-server
-          tags: latest
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/386
+          push: true
+          tags: techno-tim/littlelink-server:latest
