--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,11 +37,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Login to Registry
-        uses: docker/login-action@v1
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PAT }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Build and push
         uses: docker/build-push-action@v2
@@ -51,3 +52,6 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/386
           push: true
           tags: techno-tim/littlelink-server:latest
+
+
+          
