chore(CI): Switching to GHCR

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm/v7,linux/amd64
           push: true
           tags: techno-tim/littlelink-server:latest
