--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,13 +42,13 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.PAT }}
       -
         name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/arm/v7,linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: techno-tim/littlelink-server:latest
