chore(CI): Switching to GHCR

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,4 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: techno-tim/littlelink-server:latest
-          registry: ghcr.io
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PAT }}
+          tags: ghcr.io/techno-tim/littlelink-server:latest
