--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,15 +44,6 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.PAT }}
       -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
-          push: true
-          tags: ghcr.io/techno-tim/littlelink-server:latest
-      -
           name: Login to DockerHub
           uses: docker/login-action@v1
           with:
@@ -66,4 +57,6 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
           push: true
-          tags: timothystewart6/littlelink-server:latest
+          tags: |
+            ghcr.io/techno-tim/littlelink-server:latest
+            timothystewart6/littlelink-server:latest
