--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,12 +44,6 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.PAT }}
       -
-          name: Login to DockerHub
-          uses: docker/login-action@v1
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
         name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -57,6 +51,4 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
           push: true
-          tags: |
-            ghcr.io/techno-tim/littlelink-server:latest
-            timothystewart6/littlelink-server:latest
+          tags: ghcr.io/techno-tim/littlelink-server:latest
