feat(rewrite): Rewrote the whole thing in ReactJS 💅

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -23,5 +23,7 @@ jobs:
     - name: Install Dependencies, Test, and Build
       run: |
         yarn install --frozen-lockfile --check-files
+        yarn lint
+        yarn test
       env:
         CI: true
