--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,12 @@ services:
       - BIO=Hey! Just a place where you can connect with me!
       - GITHUB=https://github.com/timothystewart6
       - TWITTER=https://twitter.com/TechnoTimLive
-      - MASTODON=https://mastodon.social/TechnoTimLive
       - INSTAGRAM=https://www.instagram.com/techno.tim
       - YOUTUBE=https://www.youtube.com/channel/UCOk-gHyjcWZNj3Br4oxwh0A/
       - TWITCH=https://www.twitch.tv/technotim/
       - DISCORD=https://discord.gg/DJKexrJ
       - KIT=https://kit.co/TechnoTim
-      - FOOTER=Thanks for stopping by!
+      - FOOTER=Thanks for stopping by!!!
 
     ports:
       - 8080:3000
