fix(v2): migration fixes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,40 @@ services:
       - AVATAR_ALT=Techno Tim Profile Pic
       - NAME=TechnoTim
       - BIO=Hey! Just a place where you can connect with me!
+      - FOOTER=Thanks for stopping by!
       - GITHUB=https://github.com/timothystewart6
       - TWITTER=https://twitter.com/TechnoTimLive
       - INSTAGRAM=https://www.instagram.com/techno.tim
-      - YOUTUBE=https://www.youtube.com/channel/UCOk-gHyjcWZNj3Br4oxwh0A/
+      - YOUTUBE=https://www.youtube.com/channel/UCOk-gHyjcWZNj3Br4oxwh0A
       - TWITCH=https://www.twitch.tv/technotim/
       - DISCORD=https://discord.gg/DJKexrJ
+      - TIKTOK=https://www.tiktok.com/@technotim
       - KIT=https://kit.co/TechnoTim
-      - FOOTER=Thanks for stopping by!!!
+      - FACEBOOK=https://facebook.com
+      - FACEBOOK_MESSENGER=https://facebook.com
+      - LINKED_IN=https://linkedin.com
+      - PRODUCT_HUNT=https://www.producthunt.com/
+      - SNAPCHAT=https://www.snapchat.com/
+      - SPOTIFY=https://www.spotify.com/
+      - REDDIT=https://www.reddit.com/
+      - MEDIUM=https://medium.com
+      - PINTEREST=https://www.pinterest.com/
+      - EMAIL=you@example.com
+      - EMAIL_TEXT=Email Me!
+      - EMAIL_ALT=you@example.com
+      - EMAIL_ALT_TEXT=Email me!
+      - SOUND_CLOUD=https://souncloud.com
+      - FIGMA=https://figma.com
+      - TELEGRAM=https://telegram.org/
+      - TUMBLR=https://www.tumblr.com/
+      - STEAM=https://steamcommunity.com/
+      - VIMEO=https://vimeo.com/
+      - WORDPRESS=https://wordpress.com/
+      - GOODREADS=https://www.goodreads.com/
+      - SKOOB=https://www.skoob.com.br/
+      - LETTERBOXD=https://letterboxd.com/
+      - MASTODON=https://mastodon.social/
+      - MICRO_BLOG=https://micro.blog/
 
     ports:
       - 8080:3000
