--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 ---
 # this is used for local development and testing
-version: '3.0'
+version: "3.0"
 services:
   little-link:
     build:
@@ -44,7 +44,6 @@ services:
       - TELEGRAM=https://telegram.org/
       - TUMBLR=https://www.tumblr.com/
       - STEAM=https://steamcommunity.com/
-      - STRAVA=https://strava.com/
       - VIMEO=https://vimeo.com/
       - WORDPRESS=https://wordpress.com/
       - GOODREADS=https://www.goodreads.com/
@@ -52,6 +51,7 @@ services:
       - LETTERBOXD=https://letterboxd.com/
       - MASTODON=https://mastodon.social/
       - MICRO_BLOG=https://micro.blog/
+      - STRAVA=https://strava.com/
 
     ports:
       - 8080:3000
