chore(style): Added style lint

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         yarn install --frozen-lockfile --check-files
         yarn lint
+        yarn lint:style
         yarn test
       env:
         CI: true
