--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 ---
-# this is used for local development and testing
-version: "3.0"
+version: '3'
 services:
   little-link:
-    build:
-      context: ./
-      dockerfile: Dockerfile
+    image: ghcr.io/techno-tim/littlelink-server:latest
+    # dockerhub is also supported timothystewart6/littlelink-server
+    #image: timothystewart6/littlelink-server:latest
+    container_name: littlelink-server
     environment:
       - META_TITLE=Techno Tim
       - META_DESCRIPTION=Techno Tim Link page
@@ -39,7 +39,7 @@ services:
       - EMAIL=you@example.com
       - EMAIL_TEXT=Email Me!
       - EMAIL_ALT=you@example.com
-      - EMAIL_ALT_TEXT=Email me!
+      - EMAIL_ALT_TEXT=Email Us!
       - SOUND_CLOUD=https://souncloud.com
       - FIGMA=https://figma.com
       - TELEGRAM=https://telegram.org/
@@ -52,12 +52,12 @@ services:
       - LETTERBOXD=https://letterboxd.com/
       - MASTODON=https://mastodon.social/
       - MICRO_BLOG=https://micro.blog/
-      - STRAVA=https://strava.com/
+      - WHATSAPP=https://www.whatsapp.com/
+      - STRAVA=https://www.strava.com/
       - BUYMEACOFFEE=https://www.buymeacoffee.com/
-
+      - GITLAB=https://www.gitlab.com/
     ports:
       - 8080:3000
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
-      
