--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,10 @@
 version: "3.0"
 services:
   little-link:
+    image: ghcr.io/techno-tim/littlelink-server:latest
+    # dockerhub is also supported timothystewart6/littlelink-server
+    #image: timothystewart6/littlelink-server:latest
+    container_name: littlelink-server
     build:
       context: ./
       dockerfile: Dockerfile
@@ -51,7 +55,8 @@ services:
       - LETTERBOXD=https://letterboxd.com/
       - MASTODON=https://mastodon.social/
       - MICRO_BLOG=https://micro.blog/
-      - STRAVA=https://strava.com/
+      - WHATSAPP=https://www.whatsapp.com/
+      - STRAVA=https://www.strava.com/
       - BUYMEACOFFEE=https://www.buymeacoffee.com/
       - GITLAB=https://www.gitlab.com/
 
@@ -60,4 +65,3 @@ services:
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
-      
