feat(google analytics): Added GA Tracking support

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,4 @@ RAZZLE_DISCORD=https://discord.gg/DJKexrJ
 RAZZLE_TIKTOK=https://www.tiktok.com/@technotim
 RAZZLE_KIT=https://kit.co/TechnoTim
 RAZZLE_FOOTER=Thanks for stopping by!
+RAZZLE_GA_TRACKING_ID=G-XXXXXXXXXX
