--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,7 @@ jobs:
     - name: Install Dependencies, Test, and Build
       run: |
         yarn install --frozen-lockfile --check-files
-        yarn lint
-        yarn lint:style
-        yarn test
+        yarn ci
       env:
         CI: true
 
