feat(patreon): Added patreon

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
       - STRAVA=https://www.strava.com/
       - BUYMEACOFFEE=https://www.buymeacoffee.com/
       - GITLAB=https://www.gitlab.com/
+      - PATREON=https://www.patreon.com/technotim
 
     ports:
       - 8080:3000
