Add Dev.to to the list of brands

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,7 @@ services:
       - TUMBLR=https://www.tumblr.com/
       - STEAM=https://steamcommunity.com/
       - VIMEO=https://vimeo.com/
+      - DEVTO=https://dev.to/
       - WORDPRESS=https://wordpress.com/
       - GOODREADS=https://www.goodreads.com/
       - SKOOB=https://www.skoob.com.br/
