Add Dev.to to the list of brands (#43)
* Add Dev.to to the list of brands

* Move new changes to the end of files

* Oneliner

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
       - BUYMEACOFFEE=https://www.buymeacoffee.com/
       - GITLAB=https://www.gitlab.com/
       - PATREON=https://www.patreon.com/technotim
+      - DEVTO=https://dev.to/
 
     ports:
       - 8080:3000
