Add Umami Analytics integration

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ RAZZLE_TIKTOK=https://www.tiktok.com/@technotim
 RAZZLE_KIT=https://kit.co/TechnoTim
 RAZZLE_FOOTER=Thanks for stopping by!
 RAZZLE_GA_TRACKING_ID=G-XXXXXXXXXX
+RAZZLE_UMAMI_WEBSITE_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+RAZZLE_UMAMI_APP_URL=https://your-umami-app.com
