feat(Sort): Added examples and docs

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,4 @@ RAZZLE_FOOTER=Thanks for stopping by!
 RAZZLE_GA_TRACKING_ID=G-XXXXXXXXXX
 RAZZLE_UMAMI_WEBSITE_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 RAZZLE_UMAMI_APP_URL=https://your-umami-app.com
+RAZZLE_BUTTON_ORDER=YOUTUBE,TWITCH,TWITTER,GITHUB,INSTAGRAM,DISCORD,FACEBOOK,TIKTOK,KIT,PATREON
