--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,10 +63,10 @@ services:
       - GITLAB=https://www.gitlab.com/
       - PATREON=https://www.patreon.com/technotim
       - DEVTO=https://dev.to/
-      - PAYPAL=https://www.paypal.me/
       - UMAMI_WEBSITE_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
       - UMAMI_APP_URL=https://your-umami-app.com
       - BUTTON_ORDER=YOUTUBE,TWITCH,TWITTER,GITHUB,INSTAGRAM,DISCORD,FACEBOOK,TIKTOK,KIT,PATREON
+      - PAYPAL=https://www.paypal.me/user
 
     ports:
       - 8080:3000
