--- a/package.json
+++ b/package.json
@@ -22,31 +22,31 @@
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.0",
     "serialize-javascript": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "babel-preset-razzle": "4.0.6",
-    "eslint": "^7.32.0",
+    "@babel/eslint-parser": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "babel-preset-razzle": "^4.2.5",
+    "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx": "^0.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0",
-    "html-webpack-plugin": "^4.5.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-react": "^7.26.1",
+    "html-webpack-plugin": "^5.5.0",
     "markdownlint-cli": "^0.29.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "prettier": "^2.3.2",
-    "razzle": "^4.0.6",
-    "razzle-dev-utils": "^4.0.6",
+    "mini-css-extract-plugin": "^2.4.3",
+    "prettier": "^2.4.1",
+    "razzle": "^4.2.5",
+    "razzle-dev-utils": "^4.2.5",
     "react-test-renderer": "^17.0.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "webpack": "^4.44.1",
-    "webpack-dev-server": "^3.11.2"
+    "stylelint": "^14.0.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "webpack": "^5.61.0",
+    "webpack-dev-server": "^4.4.0"
   }
 }
