--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@
 RAZZLE_META_TITLE=Techno Tim
 RAZZLE_META_DESCRIPTION=Techno Tim Link page
 RAZZLE_META_AUTHOR=Techno Tim
+RAZZLE_SKIP_HEALTH_CHECK_LOGS=true
 RAZZLE_LANG=en
 RAZZLE_THEME=Dark
 RAZZLE_FAVICON_URL=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_200x200.jpg
