feata(custom buttons): Added custom buttons

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,9 @@ RAZZLE_GA_TRACKING_ID=G-XXXXXXXXXX
 RAZZLE_UMAMI_WEBSITE_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 RAZZLE_UMAMI_APP_URL=https://your-umami-app.com
 RAZZLE_BUTTON_ORDER=YOUTUBE,TWITCH,TWITTER,GITHUB,INSTAGRAM,DISCORD,FACEBOOK,TIKTOK,KIT,PATREON
+RAZZLE_CUSTOM_BUTTON_TEXT=Visit My Site,Visit My OTHER Site
+RAZZLE_CUSTOM_BUTTON_URL=https://technotim.live,https://www.youtube.com/channel/UCOk-gHyjcWZNj3Br4oxwh0A
+RAZZLE_CUSTOM_BUTTON_COLOR=#ED2756,#0085FF
+RAZZLE_CUSTOM_BUTTON_TEXT_COLOR=#ffffff,#ffffff
+RAZZLE_CUSTOM_BUTTON_ALT_TEXT=Visit my site!,Visit my OTHER Site!
+RAZZLE_CUSTOM_BUTTON_NAME=HOMEPAGE,HOMEPAGE2
