--- a/package.json
+++ b/package.json
@@ -26,27 +26,28 @@
     "serialize-javascript": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
     "@babel/preset-react": "^7.16.0",
-    "babel-preset-razzle": "^4.2.5",
-    "eslint": "^8.1.0",
+    "babel-preset-razzle": "^4.2.7",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx": "^0.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react": "^7.27.1",
     "html-webpack-plugin": "^5.5.0",
-    "markdownlint-cli": "^0.29.0",
-    "mini-css-extract-plugin": "^2.4.3",
+    "markdownlint-cli": "^0.30.0",
+    "mini-css-extract-plugin": "^2.4.5",
     "prettier": "^2.4.1",
-    "razzle": "^4.2.5",
-    "razzle-dev-utils": "^4.2.5",
+    "razzle": "^4.2.7",
+    "razzle-dev-utils": "^4.2.7",
     "react-test-renderer": "^17.0.2",
-    "stylelint": "^14.0.1",
+    "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
-    "webpack": "^5.61.0",
-    "webpack-dev-server": "^4.4.0"
+    "webpack": "^5.64.3",
+    "webpack-dev-server": "^4.5.0"
   }
 }
