--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
       - GITEA=https://gitea.io/
       - POLYWORK=https://www.polywork.com/
       - SIGNAL=https://signal.org/
+      - UNTAPPD=https://untappd.com/
     ports:
       - 8080:3000
     restart: unless-stopped
