feat(button): Added button target, default _blank

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,4 @@ RAZZLE_CUSTOM_BUTTON_TEXT_COLOR=#ffffff,#ffffff
 RAZZLE_CUSTOM_BUTTON_ALT_TEXT=Visit my site!,Visit my OTHER Site!
 RAZZLE_CUSTOM_BUTTON_NAME=HOMEPAGE,HOMEPAGE2
 RAZZLE_CUSTOM_BUTTON_ICON=fas link,fab youtube
+RAZZLE_BUTTON_TARGET=_blank
