fix(discord): updated link

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ RAZZLE_TWITTER=https://twitter.com/TechnoTimLive
 RAZZLE_INSTAGRAM=https://www.instagram.com/techno.tim
 RAZZLE_YOUTUBE=https://www.youtube.com/channel/UCOk-gHyjcWZNj3Br4oxwh0A
 RAZZLE_TWITCH=https://www.twitch.tv/technotim/
-RAZZLE_DISCORD=https://discord.gg/DJKexrJ
+RAZZLE_DISCORD=https://l.technotim.live/discord
 RAZZLE_TIKTOK=https://www.tiktok.com/@technotim
 RAZZLE_KIT=https://kit.co/TechnoTim
 RAZZLE_FOOTER=Thanks for stopping by!
