--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,28 +11,28 @@ services:
       context: ./
       dockerfile: Dockerfile
     environment:
-      - META_TITLE=Techno Tim
-      - META_DESCRIPTION=Techno Tim Link page
-      - META_AUTHOR=Techno Tim
+      - META_TITLE=Amit Sachdeva
+      - META_DESCRIPTION=Amit Ssachdeva LittleLink Page
+      - META_AUTHOR=Amit Sachdeva
       - LANG=en
       - META_INDEX_STATUS=all
       - THEME=Dark
-      - FAVICON_URL=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_200x200.jpg
-      - AVATAR_URL=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_200x200.jpg
-      - AVATAR_2X_URL=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_400x400.jpg
-      - AVATAR_ALT=Techno Tim Profile Pic
-      - NAME=TechnoTim
-      - BIO=Hey! Just a place where you can connect with me!
+      - FAVICON_URL=https://200x200.jpg
+      - AVATAR_URL=https://_200x200.jpg
+      - AVATAR_2X_URL=https://_400x400.jpg
+      - AVATAR_ALT=Amit Profile Pic
+      - NAME=AmitSachdeva
+      - BIO=Welcome! Below are few ways to connect with me! Choose the way you prefer.
       - FOOTER=Thanks for stopping by!
-      - GITHUB=https://github.com/timothystewart6
-      - TWITTER=https://twitter.com/TechnoTimLive
-      - INSTAGRAM=https://www.instagram.com/techno.tim
-      - YOUTUBE=https://www.youtube.com/channel/UCOk-gHyjcWZNj3Br4oxwh0A
-      - TWITCH=https://www.twitch.tv/technotim/
-      - DISCORD=https://l.technotim.live/discord
-      - TIKTOK=https://www.tiktok.com/@technotim
-      - KIT=https://kit.co/TechnoTim
-      - FACEBOOK=https://facebook.com
+      - GITHUB=https://github.com/amtschdva
+      - TWITTER=https://twitter.com/_amits_
+      - INSTAGRAM=https://www.instagram.com/amitsach
+      - YOUTUBE=https://www.youtube.com/channel/UC8gYQyF0reM5hDFSZWmzo7A
+      - TWITCH=https://www.twitch.tv
+      - DISCORD=https://discord.com
+      - TIKTOK=https://www.tiktok.com
+      - KIT=https://kit.co
+      - FACEBOOK=https://www.facebook.com/amit.sachdeva.397
       - FACEBOOK_MESSENGER=https://facebook.com
       - LINKED_IN=https://linkedin.com
       - PRODUCT_HUNT=https://www.producthunt.com/
@@ -41,9 +41,9 @@ services:
       - REDDIT=https://www.reddit.com/
       - MEDIUM=https://medium.com
       - PINTEREST=https://www.pinterest.com/
-      - EMAIL=you@example.com
-      - EMAIL_TEXT=Email Me!
-      - EMAIL_ALT=you@example.com
+      - EMAIL=amitsachdeva@live.com
+      - EMAIL_TEXT=Email me!
+      - EMAIL_ALT=amtschdva@gmail.com
       - EMAIL_ALT_TEXT=Email me!
       - SOUND_CLOUD=https://soundcloud.com
       - FIGMA=https://figma.com
@@ -65,7 +65,7 @@ services:
       - DEVTO=https://dev.to/
       - UMAMI_WEBSITE_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
       - UMAMI_APP_URL=https://your-umami-app.com
-      - BUTTON_ORDER=YOUTUBE,TWITCH,TWITTER,GITHUB,INSTAGRAM,DISCORD,FACEBOOK,TIKTOK,KIT,PATREON
+      - BUTTON_ORDER=GITHUB,FACEBOOK,INSTAGRAM,TWITTER,DISCORD,EMAIL,EMAIL_ALT
       - PAYPAL=https://www.paypal.me/user
       - SLACK=https://slack.com/
       - STACKOVERFLOW=https://stackoverflow.com/
