--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "serialize-javascript": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/eslint-parser": "^7.16.3",
-    "@babel/preset-react": "^7.16.0",
-    "babel-preset-razzle": "^4.2.7",
+    "@babel/core": "^7.17.2",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-react": "^7.16.7",
+    "babel-preset-razzle": "^4.2.14",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
@@ -45,15 +45,16 @@
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-react": "^7.27.1",
     "html-webpack-plugin": "^5.5.0",
-    "markdownlint-cli": "^0.30.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "prettier": "^2.4.1",
-    "razzle": "^4.2.8",
-    "razzle-dev-utils": "^4.2.8",
+    "markdownlint-cli": "^0.31.1",
+    "mini-css-extract-plugin": "^2.5.3",
+    "prettier": "^2.5.1",
+    "razzle": "^4.2.14",
+    "razzle-dev-utils": "^4.2.14",
     "react-test-renderer": "^17.0.2",
-    "stylelint": "^14.1.0",
+    "stylelint": "^14.5.0",
     "stylelint-config-prettier": "^9.0.3",
-    "webpack": "^5.65.0",
-    "webpack-dev-server": "^4.6.0"
+    "url": "^0.11.0",
+    "webpack": "^5.68.0",
+    "webpack-dev-server": "^4.7.4"
   }
 }
