--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,16 @@ services:
       context: ./
       dockerfile: Dockerfile
     environment:
-      - META_TITLE=Techno Tim
-      - META_DESCRIPTION=Techno Tim Link page
-      - META_AUTHOR=Techno Tim
-      - META_KEYWORDS=HomeLab, CSS, HTML, Engineering
+      - META_TITLE=Georgie Loves Music
+      - META_DESCRIPTION=Georgie Loves Music Link page
+      - META_AUTHOR=Georgie Loves Music
+      - META_KEYWORDS=Vinyl, Records, HipHop, Music
       - LANG=en
       - META_INDEX_STATUS=all
       - THEME=Dark
       - FAVICON_URL=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_200x200.jpg
-      - AVATAR_URL=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_200x200.jpg
-      - AVATAR_2X_URL=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_400x400.jpg
+      - AVATAR_URL=assets/20220529_123314.jpg
+      - AVATAR_2X_URL=assets/20220529_123314.jpg
       - AVATAR_ALT=Techno Tim Profile Pic
       - NAME=TechnoTim
       - BIO=Hey! Just a place where you can connect with me!
