--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,75 +19,24 @@ services:
       - META_INDEX_STATUS=all
       - THEME=Dark
       - FAVICON_URL=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_200x200.jpg
-      - AVATAR_URL=assets/20220529_123314.jpg
-      - AVATAR_2X_URL=assets/20220529_123314.jpg
+      - AVATAR_URL=../../assets/20220529_123314.jpg
+      - AVATAR_2X_URL=../../assets/20220529_123314.jpg
       - AVATAR_ALT=Techno Tim Profile Pic
-      - NAME=TechnoTim
+      - NAME=@GeorgieLovesMusic
       - BIO=Hey! Just a place where you can connect with me!
       - FOOTER=Thanks for stopping by!
-      - GITHUB=https://github.com/timothystewart6
-      - TWITTER=https://twitter.com/TechnoTimLive
+      - #GITHUB=https://github.com/timothystewart6
+      - #TWITTER=https://twitter.com/TechnoTimLive
       - INSTAGRAM=https://www.instagram.com/techno.tim
-      - YOUTUBE=https://www.youtube.com/channel/UCOk-gHyjcWZNj3Br4oxwh0A
-      - TWITCH=https://www.twitch.tv/technotim/
+      - #YOUTUBE=https://www.youtube.com/channel/UCOk-gHyjcWZNj3Br4oxwh0A
+      - #TWITCH=https://www.twitch.tv/technotim/
       - DISCORD=https://l.technotim.live/discord
-      - TIKTOK=https://www.tiktok.com/@technotim
-      - KIT=https://kit.co/TechnoTim
-      - FACEBOOK=https://facebook.com
-      - FACEBOOK_MESSENGER=https://facebook.com
-      - LINKED_IN=https://linkedin.com
-      - PRODUCT_HUNT=https://www.producthunt.com/
-      - SNAPCHAT=https://www.snapchat.com/
+      - #TIKTOK=https://www.tiktok.com/@technotim
+      - #LINKED_IN=https://linkedin.com
+      - #SNAPCHAT=https://www.snapchat.com/
       - SPOTIFY=https://www.spotify.com/
-      - REDDIT=https://www.reddit.com/
-      - MEDIUM=https://medium.com
-      - PINTEREST=https://www.pinterest.com/
-      - EMAIL=you@example.com
-      - EMAIL_TEXT=Email Me!
-      - EMAIL_ALT=you@example.com
-      - EMAIL_ALT_TEXT=Email me!
-      - SOUND_CLOUD=https://soundcloud.com
-      - FIGMA=https://figma.com
-      - TELEGRAM=https://telegram.org/
-      - TUMBLR=https://www.tumblr.com/
-      - STEAM=https://steamcommunity.com/
-      - VIMEO=https://vimeo.com/
-      - WORDPRESS=https://wordpress.com/
-      - GOODREADS=https://www.goodreads.com/
-      - SKOOB=https://www.skoob.com.br/
-      - LETTERBOXD=https://letterboxd.com/
-      - MASTODON=https://mastodon.social/
-      - MICRO_BLOG=https://micro.blog/
-      - WHATSAPP=https://www.whatsapp.com/
-      - STRAVA=https://www.strava.com/
       - BUYMEACOFFEE=https://www.buymeacoffee.com/
-      - GITLAB=https://www.gitlab.com/
-      - PATREON=https://www.patreon.com/technotim
-      - DEVTO=https://dev.to/
-      - UMAMI_WEBSITE_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
-      - UMAMI_APP_URL=https://your-umami-app.com
       - BUTTON_ORDER=YOUTUBE,TWITCH,TWITTER,GITHUB,INSTAGRAM,DISCORD,FACEBOOK,TIKTOK,KIT,PATREON
-      - PAYPAL=https://www.paypal.me/user
-      - SLACK=https://slack.com/
-      - STACKOVERFLOW=https://stackoverflow.com/
-      - LASTFM=https://last.fm/
-      - GITEA=https://gitea.io/
-      - POLYWORK=https://www.polywork.com/
-      - SIGNAL=https://signal.org/
-      - UNTAPPD=https://untappd.com/
-      - BUTTON_TARGET=_blank
-      - INSTANTGAMING=https://www.instant-gaming.com/
-      - OG_SITE_NAME=Techno Tim Live (OG)
-      - OG_TITLE=Techno Tim (OG)
-      - OG_DESCRIPTION=Techno Tim Link page (OG)
-      - OG_URL=https://technotim.live/
-      - OG_IMAGE=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_400x400.jpg
-      - OG_IMAGE_WIDTH=400
-      - OG_IMAGE_HEIGHT=400
-      - TWITTER_CARD=summary_large_image
-      - TWITTER_IMAGE=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_400x400.jpg
-      - TWITTER_SITE=@TechnoTimLive
-      - TWITTER_CREATOR=@TechnoTimLive
     ports:
       - 8080:3000
     restart: unless-stopped
