fixing docker-compose.yml file error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,15 +25,15 @@ services:
       - NAME=@GeorgieLovesMusic
       - BIO=Hey! Just a place where you can connect with me!
       - FOOTER=Thanks for stopping by!
-      - #GITHUB=https://github.com/timothystewart6
-      - #TWITTER=https://twitter.com/TechnoTimLive
+      #- GITHUB=https://github.com/timothystewart6
+      #- TWITTER=https://twitter.com/TechnoTimLive
       - INSTAGRAM=https://www.instagram.com/techno.tim
-      - #YOUTUBE=https://www.youtube.com/channel/UCOk-gHyjcWZNj3Br4oxwh0A
-      - #TWITCH=https://www.twitch.tv/technotim/
+      #- YOUTUBE=https://www.youtube.com/channel/UCOk-gHyjcWZNj3Br4oxwh0A
+      #- TWITCH=https://www.twitch.tv/technotim/
       - DISCORD=https://l.technotim.live/discord
-      - #TIKTOK=https://www.tiktok.com/@technotim
-      - #LINKED_IN=https://linkedin.com
-      - #SNAPCHAT=https://www.snapchat.com/
+      #- TIKTOK=https://www.tiktok.com/@technotim
+      #- LINKED_IN=https://linkedin.com
+      #- SNAPCHAT=https://www.snapchat.com/
       - SPOTIFY=https://www.spotify.com/
       - BUYMEACOFFEE=https://www.buymeacoffee.com/
       - BUTTON_ORDER=YOUTUBE,TWITCH,TWITTER,GITHUB,INSTAGRAM,DISCORD,FACEBOOK,TIKTOK,KIT,PATREON
