--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "ajv-keywords": "^3.5.1",
     "compression": "^1.7.4",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
