Changing back to techno tim pic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,10 @@ services:
       - LANG=en
       - META_INDEX_STATUS=all
       - THEME=Dark
-      - FAVICON_URL=https://photos.app.goo.gl/DKoaRitR8eZP17966
-      - AVATAR_URL=https://photos.app.goo.gl/DKoaRitR8eZP17966
+      - FAVICON_URL=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_200x200.jpg
+      - AVATAR_URL=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_200x200.jpg
       - AVATAR_2X_URL=https://photos.app.goo.gl/bbBWwwj76QwunRdY8
-      - AVATAR_ALT=Techno Tim Profile Pic
+      - AVATAR_ALT=Georgie Loves Music Profile Pic
       - NAME=@GeorgieLovesMusic
       - BIO=Hey! Just a place where you can connect with me!
       - FOOTER=Thanks for stopping by!
