--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       - UNTAPPD=https://untappd.com/
       - BUTTON_TARGET=_blank
       - INSTANTGAMING=https://www.instant-gaming.com/
+      - TRAKT=https://trakt.tv
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
