--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,34 +11,32 @@ services:
       context: ./
       dockerfile: Dockerfile
     environment:
-      - META_TITLE=Georgie Loves Music
-      - META_DESCRIPTION=Georgie Loves Music Link page
-      - META_AUTHOR=Georgie Loves Music
-      - META_KEYWORDS=Vinyl, Records, HipHop, Music
-      - LANG=en
-      - META_INDEX_STATUS=all
-      - THEME=Dark
-      - FAVICON_URL=https://lh3.googleusercontent.com/aR5zcX2N8aLGQGrknnpKiF1Y68W73pXqaw47dfWnhscxiH53ATF537vjYGOrab4BHNCsNaKiNcAlsCE7nrq0Fjh9Rb1lGnUD8g70qQ49XmE4_0wJutmCWQJaKfJsQLKp9TltODLASQqkseksvdiCoPiE_9qwY2c0So86bwVCxEUjUAGnH1laJHBHR9xxr620S55USQRtejVJiW38Xd4GfQg-g9LNLnPyaC1qya9okAP7SevKA5uHIrD5g1UQFrFkjWYX2uXWIk4DaClTqB7cZL1m9sZV5qu7nvxs855X01Pge4KYwrwwbu5m3grqKBR8YLEKE2xw3SYauqgKN788KZiYvHA8vvFyFXbdLKRwZWoJ55bNJj6pYugNAzGjNP43TxcriIONju5vpDbZotEUdcglqRLkMcDJzsxL43E-vQuC0iSwfGOwGCzxzpRsffdr6qIUf5AAfOcNRv8V-IXwJOEYVUv15lqOAPil0brfMUb9wzGxq8e5BUW1ICUV_b2Y2e6tRK35ur2w8074usaAK-UwgCEegEQl-7-smXicFR-J1J1Q9Jha5VPcgOAKsbi7gt21kQbdGVxBOEMt596WOaNG-tqHX6b1x1j7TL33dmbtPyuihZuYQh1oT71f41TPxSo5YTMmdGCbVhOuWqbDzFCUxY0WOoKhaJkMvUwQqaCr6GglxUvKcKGuSArC8RJEOmpaOXLBvcjHIg9A5vgUgjZf11wNhw1WokRFSOz7N8WIML622p4q_E8ndvs=w200-h201-no?authuser=0
-      - AVATAR_URL=https://lh3.googleusercontent.com/Z4mqKVL0XCMAjw5qkhq2g6-eCyP4odBQ9fLosE420UEyv_iQDu6H7fNFQGC-qKa2jSz-1SMrSnywolicrH1ELe15AwIhIDZBNUx1jcZtwOZL_kpbjabbkngyAPOEyCsWwmS_wK2meHCfRPWxBInuxNkdrXAaZawFJKfdOMp4vmCuEeKm7lWXK4DbJmWgSvQhx-veoGMAihTd2VhC8aPpCpXBYn93TJffmMDsTo-0KGcdkiuUd4EbDpevRtALkuq5jgmcnVpo9Au6372qr1FL-LsqUVeKI5IgLq7XYxRdet_pu7GkmUu4M1upiondrXupoq99Dou3MNUzCgSooExhF8CJe0Qsv7wQZ810YvhYMvn8yI3RhDVKZqbDHIKdRBpYsqyRaic_7SI8aglrMT7-O-ieXKXt5cYm4rbVZhRj6WcZmQLq4nF-yWStPjjtxx9-tvH1D9z5NGKaVwiKcTQRB0r7zwU-F8vmRZ7OuHKJn6O0hjkG1cEpzZM30uUfwBJ2YWbZ6wdSOoprdEReVhb01PjpaMmVH4Ho0jHAWkN3PI0drew4dMAoVQSzogY_qiz5Yj7wf_FgoYufjk0NrvW1uSW7hXjMsbFmHE1u90Nh4vZVpuzcqQG7DZgjEcTE_9CoRG8LTZeZ5NajFKgBZZ2ZjlpDcY4gF1bpnAgcGL00HY2tSTymXnrK8m9XTAAG--IR5VsHqhxKCAwwqKW1lynRuytQP2nVXgkI8kYZUlRfVCc71OGKUWkVWN7Rdqk=s200-no?authuser=0
-      - AVATAR_2X_URL=https://lh3.googleusercontent.com/LuuYJ58UrvTg5G5PZlYUSU3oCuY5GYl5XhKGoURAIqkWA4weQP-Z4O_2XxUM91TMzYpHaskF4_7vQR6OMInzZmIHhgGJk8tRy5OzttM0xQkQ4iSOQm6GIT1I87ICNL6ra5CTDUo_N0KHfMkJpAKbivxV1EnnXeB5McOvaDvMc8oc7rZavee_LcvRHftWMZvJDl4iVEQcoDMg6nJBQsLKlvXwACSb3TDuT8umZRIzY-YbmfWGirwU7SwyUWn2uAgb9-thSPxvylg21LnKpaNRwMFoZ9QC5A5ZUtSKvD6gchHRQY2lcmWL2gsh1w2ojndZirOdIojJKbinOCCZJoAV2I_IZKTS6b2s6rcgd5n3DOjiolqTgds0iNHBaJA1Jd5-KSjLMIcAE3ZGDVNxHWD2dpwv7TEjLE-pP3BS_zuRcMyowIUMgP5PND4QjqhZAdrRCPSFH7b4tIv0o7l7encif_3HS2clwU2PPOrcU11qX8moHFpXn5hUR7ilbwTTJs-M-M0JxXFkRX6V0RvWsrvouWAoHPr68WUF67VBhI60QS8lGL6aQfn4Wc08c-meYY-Iiyl8PG1AuaiVvAdgojDwiPbrArbexUz4T6n3eDvxNTPkpG4rOoalO_1mnOC6NQib8XqvYwZCr8K4o4VnODzv4MShuLE-fRSOBe43OoSpqIzyewsD1kokorBZqmb_lNfHFhZzDLxdft5RP_Fy8zhvqSDjnrMu8YLkZp41zOFbcXgEf5_yjf6s3TKmVcY=s400-no?authuser=0
-      - AVATAR_ALT=Georgie Loves Music Profile Pic
-      - NAME=@GeorgieLovesMusic
-      - BIO= |-
-          Software Developer from Dallas, TX
-          Lover of Vinyl 
-      - FOOTER="Squeeze the juice out of all the suckers with power and pour some back out, so as to water the flowers. This world is ours." \\n- Guru of Gang Starr
+            META_TITLE: Georgie Loves Music
+            META_DESCRIPTION: Georgie Loves Music Link page
+            META_AUTHOR: Georgie Loves Music
+            META_KEYWORDS: Vinyl, Records, HipHop, Music
+            LANG: en
+            META_INDEX_STATUS: all
+            THEME: Dark
+            FAVICON_URL: https://lh3.googleusercontent.com/aR5zcX2N8aLGQGrknnpKiF1Y68W73pXqaw47dfWnhscxiH53ATF537vjYGOrab4BHNCsNaKiNcAlsCE7nrq0Fjh9Rb1lGnUD8g70qQ49XmE4_0wJutmCWQJaKfJsQLKp9TltODLASQqkseksvdiCoPiE_9qwY2c0So86bwVCxEUjUAGnH1laJHBHR9xxr620S55USQRtejVJiW38Xd4GfQg-g9LNLnPyaC1qya9okAP7SevKA5uHIrD5g1UQFrFkjWYX2uXWIk4DaClTqB7cZL1m9sZV5qu7nvxs855X01Pge4KYwrwwbu5m3grqKBR8YLEKE2xw3SYauqgKN788KZiYvHA8vvFyFXbdLKRwZWoJ55bNJj6pYugNAzGjNP43TxcriIONju5vpDbZotEUdcglqRLkMcDJzsxL43E-vQuC0iSwfGOwGCzxzpRsffdr6qIUf5AAfOcNRv8V-IXwJOEYVUv15lqOAPil0brfMUb9wzGxq8e5BUW1ICUV_b2Y2e6tRK35ur2w8074usaAK-UwgCEegEQl-7-smXicFR-J1J1Q9Jha5VPcgOAKsbi7gt21kQbdGVxBOEMt596WOaNG-tqHX6b1x1j7TL33dmbtPyuihZuYQh1oT71f41TPxSo5YTMmdGCbVhOuWqbDzFCUxY0WOoKhaJkMvUwQqaCr6GglxUvKcKGuSArC8RJEOmpaOXLBvcjHIg9A5vgUgjZf11wNhw1WokRFSOz7N8WIML622p4q_E8ndvs=w200-h201-no?authuser=0
+            AVATAR_URL: https://lh3.googleusercontent.com/Z4mqKVL0XCMAjw5qkhq2g6-eCyP4odBQ9fLosE420UEyv_iQDu6H7fNFQGC-qKa2jSz-1SMrSnywolicrH1ELe15AwIhIDZBNUx1jcZtwOZL_kpbjabbkngyAPOEyCsWwmS_wK2meHCfRPWxBInuxNkdrXAaZawFJKfdOMp4vmCuEeKm7lWXK4DbJmWgSvQhx-veoGMAihTd2VhC8aPpCpXBYn93TJffmMDsTo-0KGcdkiuUd4EbDpevRtALkuq5jgmcnVpo9Au6372qr1FL-LsqUVeKI5IgLq7XYxRdet_pu7GkmUu4M1upiondrXupoq99Dou3MNUzCgSooExhF8CJe0Qsv7wQZ810YvhYMvn8yI3RhDVKZqbDHIKdRBpYsqyRaic_7SI8aglrMT7-O-ieXKXt5cYm4rbVZhRj6WcZmQLq4nF-yWStPjjtxx9-tvH1D9z5NGKaVwiKcTQRB0r7zwU-F8vmRZ7OuHKJn6O0hjkG1cEpzZM30uUfwBJ2YWbZ6wdSOoprdEReVhb01PjpaMmVH4Ho0jHAWkN3PI0drew4dMAoVQSzogY_qiz5Yj7wf_FgoYufjk0NrvW1uSW7hXjMsbFmHE1u90Nh4vZVpuzcqQG7DZgjEcTE_9CoRG8LTZeZ5NajFKgBZZ2ZjlpDcY4gF1bpnAgcGL00HY2tSTymXnrK8m9XTAAG--IR5VsHqhxKCAwwqKW1lynRuytQP2nVXgkI8kYZUlRfVCc71OGKUWkVWN7Rdqk=s200-no?authuser=0
+            AVATAR_2X_URL: https://lh3.googleusercontent.com/LuuYJ58UrvTg5G5PZlYUSU3oCuY5GYl5XhKGoURAIqkWA4weQP-Z4O_2XxUM91TMzYpHaskF4_7vQR6OMInzZmIHhgGJk8tRy5OzttM0xQkQ4iSOQm6GIT1I87ICNL6ra5CTDUo_N0KHfMkJpAKbivxV1EnnXeB5McOvaDvMc8oc7rZavee_LcvRHftWMZvJDl4iVEQcoDMg6nJBQsLKlvXwACSb3TDuT8umZRIzY-YbmfWGirwU7SwyUWn2uAgb9-thSPxvylg21LnKpaNRwMFoZ9QC5A5ZUtSKvD6gchHRQY2lcmWL2gsh1w2ojndZirOdIojJKbinOCCZJoAV2I_IZKTS6b2s6rcgd5n3DOjiolqTgds0iNHBaJA1Jd5-KSjLMIcAE3ZGDVNxHWD2dpwv7TEjLE-pP3BS_zuRcMyowIUMgP5PND4QjqhZAdrRCPSFH7b4tIv0o7l7encif_3HS2clwU2PPOrcU11qX8moHFpXn5hUR7ilbwTTJs-M-M0JxXFkRX6V0RvWsrvouWAoHPr68WUF67VBhI60QS8lGL6aQfn4Wc08c-meYY-Iiyl8PG1AuaiVvAdgojDwiPbrArbexUz4T6n3eDvxNTPkpG4rOoalO_1mnOC6NQib8XqvYwZCr8K4o4VnODzv4MShuLE-fRSOBe43OoSpqIzyewsD1kokorBZqmb_lNfHFhZzDLxdft5RP_Fy8zhvqSDjnrMu8YLkZp41zOFbcXgEf5_yjf6s3TKmVcY=s400-no?authuser=0
+            AVATAR_ALT: Georgie Loves Music Profile Pic
+            NAME: '@GeorgieLovesMusic'
+            BIO: Vinyl Collector from Dallas, TX
+            FOOTER:
       #- GITHUB=https://github.com/timothystewart6
       #- TWITTER=https://twitter.com/TechnoTimLive
-      - INSTAGRAM=https://www.instagram.com/georgielovesmusic
+            INSTAGRAM: https://www.instagram.com/georgielovesmusic
       #- YOUTUBE=https://www.youtube.com/channel/UCOk-gHyjcWZNj3Br4oxwh0A
       #- TWITCH=https://www.twitch.tv/technotim/
-      - DISCORD=https://discord.gg/jZ5NTxSP8Y
+            DISCORD: https://discord.gg/jZ5NTxSP8Y
       #- TIKTOK=https://www.tiktok.com/@technotim
       #- LINKED_IN=https://linkedin.com
       #- SNAPCHAT=https://www.snapchat.com/
-      - SPOTIFY=https://www.open.spotify.com/user/22l7hdxscuqle4rvooi73tpsy
-      - BUYMEACOFFEE=https://www.buymeacoffee.com/itsgeorgie
-      - BUTTON_ORDER=YOUTUBE,TWITCH,TWITTER,GITHUB,INSTAGRAM,DISCORD,FACEBOOK,TIKTOK,KIT,PATREON
+            SPOTIFY: https://www.open.spotify.com/user/22l7hdxscuqle4rvooi73tpsy
+            BUYMEACOFFEE: https://www.buymeacoffee.com/itsgeorgie
+            BUTTON_ORDER: YOUTUBE,TWITCH,TWITTER,GITHUB,INSTAGRAM,DISCORD,FACEBOOK,TIKTOK,KIT,PATREON
     ports:
       - 80:3000
     restart: unless-stopped
