--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,7 @@ services:
       - INSTANTGAMING=https://www.instant-gaming.com/
       - TRAKT=https://trakt.tv
       - CASHAPP=https://cash.app/
+      - TEESPRING=https://teespring.com/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
