Added Keybase Fixed Image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@
 version: "3.0"
 services:
   little-link:
-    image: docker.io/library/links
-    # ghcr.io/techno-tim/littlelink-server:latest
+    image: ghcr.io/techno-tim/littlelink-server:latest
     # dockerhub is also supported timothystewart6/littlelink-server
     #image: timothystewart6/littlelink-server:latest
     container_name: littlelink-server
@@ -82,6 +81,7 @@ services:
       - CASHAPP=https://cash.app/
       - TEESPRING=https://teespring.com/
       - XING=https://www.xing.com/en
+      - KEYBASE=https://keybase.io/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
