--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,7 @@ services:
       - XING=https://www.xing.com/en
       - KEYBASE=https://keybase.io/
       - ONLYFANS=https://onlyfans.com/
+      - SESSION=https://getsession.org/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
