--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,7 @@ services:
       - ONLYFANS=https://onlyfans.com/
       - SESSION=https://getsession.org/
       - THREEMA=https://threema.ch/en/
+      - STREAMLABS=https://streamlabs.com/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
