Added Amazon Affiliate

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,7 @@ services:
       - THREEMA=https://threema.ch/en/
       - STREAMLABS=https://streamlabs.com/
       - PRIVATEBIN=https://privatebin.net/ 
+      - AMAZON_AFFILIATE=https://affiliate-program.amazon.co.uk/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
