Added Amazon Affilate and Wishlist

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@
 version: "3.0"
 services:
   little-link:
-    image: ghcr.io/techno-tim/littlelink-server:latest
+    image: docker.io/library/links
+    
+    # ghcr.io/techno-tim/littlelink-server:latest
     # dockerhub is also supported timothystewart6/littlelink-server
     #image: timothystewart6/littlelink-server:latest
     container_name: littlelink-server
@@ -88,6 +90,7 @@ services:
       - STREAMLABS=https://streamlabs.com/
       - PRIVATEBIN=https://privatebin.net/ 
       - AMAZON_AFFILIATE=https://affiliate-program.amazon.co.uk/
+      - AMAZON_WISHLIST=https://www.amazon.co.uk/b?node=22758010031
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
